--- a/src/HTML/Ejemplos/index.html
+++ b/src/HTML/Ejemplos/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Maximiliano</title>
     <meta name="description" content="Maximiliano Nuñez Técnico en informática profesional y personal">
-    <link rel="icon" href="images/yo.jpg">
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="icon" href="../../../assets/images/yo.jpg">
+    <link rel="stylesheet" href="../../CSS/Ejemplos/estilos.css">
 
 </head>
 
@@ -26,7 +26,8 @@
 
     <main>
         <article>
-            <img class="yo" src="images/yo.jpg" alt="Fotografía de Maximiliano Nuñez sentado en una piedra"
+            <img class="yo" src="../../../assets/images/yo.jpg"
+                alt="Fotografía de Maximiliano Nuñez sentado en una piedra"
                 width=https://github.com/MaxiNunez24/curso-testing-aplicaciones.git300>
 
             <p><strong>Técnico en informática personal y profesional</strong>. Estudiante de 2do año de
