--- a/src/CSS/Flexbox/Ejercicios/Julian/Galeria/index.html
+++ b/src/CSS/Flexbox/Ejercicios/Julian/Galeria/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div class="container">
-<div class="item"><img src="Imagenes/image.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 2.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 3.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 9.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 5.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 6.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 7.png" alt=""></div>
-<div class="item"><img src="Imagenes/image copy 8.png" alt=""></div>
+        <img src="Imagenes/image.png" alt="">
+        <img src="Imagenes/image copy.png" alt="">
+        <img src="Imagenes/image copy 2.png" alt="">
+        <img src="Imagenes/image copy 3.png" alt="">
+        <img src="Imagenes/image copy 5.png" alt="">
+        <img src="Imagenes/image copy 6.png" alt="">
+        <img src="Imagenes/image copy 7.png" alt="">
+        <img src="Imagenes/image copy 8.png" alt="">
 
+    </div>
 </body>
 
 </html>
